--- a/filesHtml/default.html
+++ b/filesHtml/default.html
@@ -2,15 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Exemplo HTML Simples</title>
+    <title>webserv</title>
 </head>
 <body>
-    <h1>Título da Página</h1>
-    <p>Este é um parágrafo de texto.</p>
-    <ul>
-        <li>Item da lista 1</li>
-        <li>Item da lista 2</li>
-        <li>Item da lista 3</li>
-    </ul>
+    <h1>Default</h1>
 </body>
 </html>
